--- a/lib/template/reveal.html
+++ b/lib/template/reveal.html
@@ -45,6 +45,8 @@
     <script src="{{{base}}}/plugin/zoom/zoom.js"></script>
     <script src="{{{base}}}/plugin/notes/notes.js"></script>
     <script src="{{{base}}}/plugin/math/math.js"></script>
+    <script src="{{{base}}}/plugin/reveal/math.js"></script>
+    <script src="{{{base}}}/plugin/copycode/copycode.js"></script>
     <script>
       function extend() {
         var target = {};
@@ -72,7 +74,8 @@
           RevealHighlight,
           RevealZoom,
           RevealNotes,
-          RevealMath
+          RevealMath,
+          CopyCode
         ]
       };
 
